# beam-basilisk

./: CMakeLists.txt  flake.nix
cmake/: BasiliskCTargets.cmake  BasiliskConfig.cmake.in  detect_compiler.cmake  generate_symbols_h.cmake
src/: AUTHORS  CMakeLists.txt  EOS_Mie_Gruneisen.h  INSTALL  Makefile  Makefile.defs  README  README.server  Tips  all-mach.h  autotest.sh  axi.h  bcg.h  common.h  compressible-tension.h  config.darcsit  config.gcc  config.osx  curvature.h  discharge.h  display.h  distance.h  draw.h  draw_get.h  draw_json.h  embed.h  external.tags  fracface.h  fractions.h  iforce.h  include.c  include.lex  input.h  integral.h  momentum.h  multilayer.h  myc2d.h  no-coalescence.h  okada.h  output.h  (+32 more)
src/ast/: CMakeLists.txt  Makefile  README  ast.c  ast.h  basilisk.c  basilisk.h  basilisk.yacc  check.c  defaults.h  einstein_sum.h  expr.c  faststack.c  init_solver.h  kernels.c  macro.h  optional.h  parser.h  references.c  stack.c  stack.h  stencil.c  symbols.h  tokens.c  tokens.lex  transform.c  translate.c  typedef.c  types.c
src/ast/interpreter/: CMakeLists.txt  Makefile  README  declarations.h  dimension.c  graph.c  internal.h  interpreter.c  overload.h  test10.ref  test12.ref  test14.ref  test16.ref  test18.ref  test21.c  test21.ref  test22.c  test22.ref  test26.ref  test3.ref  test4.ref  test6.c  test6.ref
src/ast/interpreter/dimension-tests/: test.ref  test1.ref  test10.ref  test13.ref  test14.ref  test15.ref  test16.ref  test17.ref  test18.ref  test19.c  test2.ref  test20.c  test20.ref  test21.c  test21.ref  test22.ref  test3.ref  test4.ref  test5.c  test5.ref  test6.ref  test7.ref  test8.ref  test9.ref
src/ast/std/: hdf5.h  hdf5_hl.h  signal.h  zlib.h
src/compressible/: Mie-Gruneisen.h  tension.h  thermal.h  two-phase.h
src/darcsit/: Makefile  apply.sh  gethal.sh  literate-c.c  literate-c.lex  sanitize.c
src/darcsit/cgi-bin/: darcsit
src/examples/: Makefile  README  atomisation.c  atomisation.dims.ref  bflux.h  breaking.c  bubble.dims.ref  gaussian-ns.dims.ref  global-tides.c  global.c  gulf-stream.c  gulf-stream.dims.ref  isotropic.c  karman.c  karman.dims.ref  madsen.dims.ref  master.c  naca2414-starting.c  ocean.h  porous3D.c  swasi.dims.ref  tangaroa.c  tangaroa.dims.ref  tohoku.c  tsunami.c  tsunami.dims.ref
src/gl/: CMakeLists.txt  INSTALL  Makefile  fb_dumb.c  fb_tiny.c  gl.h  og_font.h  tinygl.h  utils.c  utils.h
src/gl/tinyrenderer/: CMakeLists.txt  geometry.h  main.cpp  our_gl.cpp  our_gl.h  tiny.c  tiny.h
src/gotm/: common.h
src/gpu/: Makefile  errors.lex  gpu.h  output.h
src/grid/: balance.h  cartesian-common.h  cartesian.h  cartesian1D.h  cartesian_gpu.h  config.h  events.h  foreach_cell.h  layers.h  multigrid-common.h  multigrid-mpi.h  multigrid.h  neighbors.h  stencils.h  tree-common.h  tree.h  variables.h
src/grid/gpu/: Benchmarks.md  Makefile  cartesian.h  errors.c  errors.lex  glad.c  gpu.h  grid.h  multigrid.h  output.h  reduction.h
src/grid/gpu/Benchmarks/: advection  advection.awk  lid  reversed
src/grid/memindex/: range.h
src/jview/three.js/editor/js/: Menubar.Help.js
src/kdt/: Makefile
src/layered/: conservation.h  coriolis.h  diffusion.h  entrainment.h  gotm.h  hydro-tension.h  hydro.h  implicit.h  nh.h  perfs.h  perfs.plot  rpe.h
src/navier-stokes/: centered.h  conserving.h  perfs.h  perfs.plot  stream.h
src/notes/: index.tm
src/test/: AXI_shrinkage.c  DiscontinuityAdvection.c  InclinedShockBCG.c  Makefile  README  advection.c  advection.gpu.ref  axi.c  axi.gpu.ref  axiadvection.c  axiadvection.ref  balance7.c  basilisk.ref  bleck.c  bleck.dims.ref  bleck.gpu.ref  bleck.ref  bubble-spherical.ref  bubble.c  bubble.h  bubble.ref  bubbleoscillation.c  bubbleoscillation.ref  bump1.c  bump2D-gpu.c  bump2D-gpu.ref  bump2D.c  bump2D.dims.ref  capwave-clsvof.ref  capwave.c  capwave.dims.ref  circle.c  coarsen.ref  collapse-inviscid.ref  collapse-spherical.ref  collapse.c  collapse.ref  collapseinv.c  collapseinv.ref  collapsevisc.c  (+142 more)
src/wsServer/: CMakeLists.txt  Makefile
src/yacc/: Makefile  basilisk.yacc  node.c  node.h  parser.h  tokens.lex  transform.c
